added new logic for classes
